--- a/FrontEnd1/.settings/org.eclipse.wst.common.component
+++ b/FrontEnd1/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,9 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <dependent-module archiveName="BackEnd1-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/BackEnd1/BackEnd1">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="FrontEnd1"/>
         <property name="java-output-path" value="/FrontEnd1/target/classes"/>
     </wb-module>
